Implemented CostMatrix and CostMatrixTextFileParser. Added interface for allowing users to extend lib with different CostMatrix parsers.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,16 @@ set(CMAKE_CXX_STANDARD 20)
 
 project(CPM_solver)
 
-set(SolverSources src/Network.cpp)
+set(SolverSources src/Network.cpp
+                  src/CostMatrixTextFileParser.cpp
+                  src/NetBuilder.cpp)
 add_library(Solver ${SolverSources})
 target_include_directories(Solver PUBLIC inc)
 
-set(Sources src/main.cpp)
-add_executable(Exec ${Sources})
+add_executable(Exec src/main.cpp)
 
 target_link_libraries(Exec
-                    Solver)
+                      Solver)
 
 set_target_properties(Exec PROPERTIES CXX_STANDARD 20)
 target_compile_features(Exec PUBLIC cxx_std_20)
