--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/lib/pugixml"]
 	path = lib/lib/pugixml
 	url = https://github.com/zeux/pugixml
+[submodule "lib/pugixml"]
+	path = lib/pugixml
+	url = https://github.com/zeux/pugixml
