--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SolverSrc solver.cpp)
+set(SOLVER_SOURCES solver/NetworkBuilder.cpp)
 
-add_library(Solver ${SolverSrc})
-target_include_directories(Solver PRIVATE ${PROJECT_SOURCE_DIR}/inc)
+add_library(Solver ${SOLVER_SOURCES})
+target_include_directories(Solver PRIVATE inc)
