--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(DATA_SOURCES data/AttributeTree.cpp
-                 data/JobList.cpp)
+set(DATA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/AttributeTree.cpp
+                 ${CMAKE_CURRENT_SOURCE_DIR}/JobList.cpp)
 
 add_library(Data ${DATA_SOURCES})
-target_include_directories(Data PRIVATE inc)
+target_include_directories(Data PRIVATE ${CMAKE_HOME_DIRECTORY}/inc)
