--- a/src/ut/data/CMakeLists.txt
+++ b/src/ut/data/CMakeLists.txt
@@ -1,3 +1,4 @@
-set(DATA_UT_SOURCES JobListTexts.cpp)
+set(DATA_UT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/JobListTests.cpp)
 
-target_sources(${PROJECT_NAME}-UT ${DATA_UT_SOURCES})
+add_library(Data_UT ${DATA_UT_SOURCES})
+target_include_directories(Data_UT PUBLIC ${CMAKE_HOME_DIRECTORY}/inc ${GTEST_INCLUDE_DIR})
