--- a/src/solver/CMakeLists.txt
+++ b/src/solver/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(SOLVER_SOURCES solver/NetworkBuilder.cpp)
+set(SOLVER_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/NetworkBuilder.cpp)
 
 add_library(Solver ${SOLVER_SOURCES})
-target_include_directories(Solver PRIVATE inc)
+target_include_directories(Solver PRIVATE ${CMAKE_HOME_DIRECTORY}/inc)
