refactored AttributeTree and Node class, refactored testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,15 @@ project(CPMSolver CXX)
 SET(CMAKE_CXX_STANDARD 20)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(GTEST_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/lib/googletest/googletest/include")
+
 if (MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /permissive-")
 endif()
 
-set(GTEST_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/lib/googletest/googletest/include")
-
+add_subdirectory(src)
 add_subdirectory(lib)
+add_subdirectory(test)
 
 if (NOT MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wconversion -Wformat -Werror -Wunused -Wattributes")
@@ -28,21 +30,17 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 add_library(${PROJECT_NAME} INTERFACE)
-target_include_directories(${PROJECT_NAME} INTERFACE inc)
+target_include_directories(${PROJECT_NAME} INTERFACE inc test/mocks)
 target_link_libraries(${PROJECT_NAME} INTERFACE
                       Data
                       Solver
                       pugixml)
 
-add_executable(${PROJECT_NAME}-UT src/ut/empty.cpp)
-target_link_libraries(${PROJECT_NAME}-UT
-                      gtest
-                      gmock
-                      gtest_main
-                      UTs
-                      ${PROJECT_NAME})
+file(MAKE_DIRECTORY ut_runtimes)
 
-add_custom_target(ut COMMAND ./${PROJECT_NAME}-UT DEPENDS ${PROJECT_NAME}-UT)
+add_custom_target(ut)
+add_dependencies(ut DATA_UT)
+
 enable_testing()
 
 add_test(
